--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
-Hello World
+---
+layout: default
+title: Home
+---
+<header>
+  <h1>
+    <strong>{{ site.name }}</strong>
+  </h1>
+
+  <img alt="{{ site.niame }} picture" src="{{ site.picture }}" />
+
+  <a href="{{ site.cv }}">CV</a>
+
+  <nav>
+    <ul>
+      <li>zhucz16@mails.tsinghua.edu.cn</li>
+    </ul>
+  </nav>
+
+</header>
+
+<section class="content">
+  <h1>About me</h1>
+  <p>
+    I'm a senior undergraduate student majoring in Computer Science (from <a href="https://iiis.tsinghua.edu.cn/en/">Yao class</a>) at Tsinghua University.</br>
+
+    I visited CMU as a research intern in 2019 and worked with <a href="https://www.cs.cmu.edu/~goyal/">Vipul Goyal</a> on various topics in cryptography, including non-malleable secret sharing, Blockchain protocols, and secure multiparty computation protocols.
+  </p>
+
+</section>
+
+<section class="content">
+  <h1>Study Interests</h1>
+  <p>
+    I'm interested in working on all topics in cryptography and also in related fields of theoretical computater science. I'm currently working on reducing the communication complexity of MPC protocols.
+  </p>
+
+</section>
+
+<section class="content">
+  <h1>Submitted/Manuscripts</h1
+  <p>
+  <ul>
+    <li>
+      <strong>Communication-Efficient Unconditional Honest-Majority MPC with Guaranteed Output Delivery</strong></br>
+      with <a href="https://www.cs.cmu.edu/~goyal/">Vipul Goyal</a>, Yifan Song, in submission.
+    </li>
+  </ul>
+  </p>
+</section>
