Change titles in index page

--- a/index.html
+++ b/index.html
@@ -22,17 +22,13 @@ title: Home
 <section class="content">
   <h1>About me</h1>
   <p>
-    I'm a senior undergraduate student majoring in Computer Science (from <a href="https://iiis.tsinghua.edu.cn/en/">Yao class</a>) at Tsinghua University.</br>
-
+    I'm a senior undergraduate student majoring in Computer Science (from <a href="https://iiis.tsinghua.edu.cn/en/">Yao class</a>) at Tsinghua University.
+  </p>
+  <p>
     I visited CMU as a research intern in 2019 and worked with <a href="https://www.cs.cmu.edu/~goyal/">Vipul Goyal</a> on various topics in cryptography, including non-malleable secret sharing, Blockchain protocols, and secure multiparty computation protocols.
   </p>
-
-</section>
-
-<section class="content">
-  <h1>Study Interests</h1>
   <p>
-    I'm interested in working on all topics in cryptography and also in related fields of theoretical computater science. I'm currently working on reducing the communication complexity of MPC protocols.
+    I'm interested in all topics in cryptography and also in related fields of theoretical computater science. I'm currently working on reducing the communication complexity of MPC protocols.
   </p>
 
 </section>
