Update CV and image

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@ title: Home
     I visited CMU as a research intern in 2019 and worked with <a href="https://www.cs.cmu.edu/~goyal/">Vipul Goyal</a> on various topics in cryptography, including non-malleable secret sharing, Blockchain protocols, and secure multiparty computation protocols.
   </p>
   <p>
-    I'm interested in all topics in cryptography and also in related fields of theoretical computater science. I'm currently working on reducing the communication complexity of MPC protocols.
+    I'm interested in all topics in cryptography and also in related fields of theoretical computater science. I'm currently focusing on problems related to reducing min-entropy requirement for non-malleable extractors.
   </p>
 
 </section>
-
+<!-- 
 <section class="content">
   <h1>Submitted/Manuscripts</h1
   <p>
@@ -44,3 +44,4 @@ title: Home
   </ul>
   </p>
 </section>
+-->
