Update PhD first

--- a/index.html
+++ b/index.html
@@ -9,39 +9,46 @@ title: Home
 
   <img alt="{{ site.niame }} picture" src="{{ site.picture }}" />
 
-  <a href="{{ site.cv }}">CV</a>
+  <!-- <a href="{{ site.cv }}">CV</a> !-->
 
   <nav>
     <ul>
-      <li>zhucz16@mails.tsinghua.edu.cn</li>
+      <li>zhucz20 at uw dot edu</li>
     </ul>
   </nav>
 
 </header>
 
 <section class="content">
-  <h1>About me</h1>
+  <h1>About</h1>
   <p>
-    I'm a senior undergraduate student majoring in Computer Science (from <a href="https://iiis.tsinghua.edu.cn/en/">Yao class</a>) at Tsinghua University.
+    I am a second-year Ph.D. student working in cryptography at the Paul G. Allen School of Computer Science & Engineering at the University of Washington. I am co-advised by <a href="https://homes.cs.washington.edu/~tessaro/">Stefano Tessaro</a> and <a href="https://homes.cs.washington.edu/~rachel/">Rachel Lin</a>.
   </p>
-  <p>
+  <!--<p>
     I visited CMU as a research intern in 2019 and worked with <a href="https://www.cs.cmu.edu/~goyal/">Vipul Goyal</a> on various topics in cryptography, including non-malleable secret sharing, Blockchain protocols, and secure multiparty computation protocols.
-  </p>
+  </p>-->
   <p>
-    I'm interested in all topics in cryptography and also in related fields of theoretical computater science. I'm currently focusing on problems related to reducing min-entropy requirement for non-malleable extractors.
+    I am interested in cryptography and also in related fields of theoretical computater science. I love solving concrete, discrete problems. My currently focus is on various signature schemes, such as blind signatures and threshold signatures.
   </p>
 
 </section>
-<!-- 
+
 <section class="content">
-  <h1>Submitted/Manuscripts</h1
+  <h1>Conference Publications</h1
   <p>
   <ul>
     <li>
-      <strong>Communication-Efficient Unconditional Honest-Majority MPC with Guaranteed Output Delivery</strong></br>
-      with <a href="https://www.cs.cmu.edu/~goyal/">Vipul Goyal</a>, Yifan Song, in submission.
+      <a href="https://eprint.iacr.org/2020/157"> Multi-source Non-malleable Extractors and Applications </a>
+      with Vipul Goyal, Akshayaram Srinivasan <strong>(EUROCRYPT 2021)</strong>
+    </li>
+    <li>
+      <a href="https://eprint.iacr.org/2020/189"> Guaranteed Output Delivery Comes Free in Honest Majority MPC </a>
+      with Vipul Goyal, Yifan Song <strong>(Crypto 2020)</strong>
+    </li>
+    <li>
+      <a href="https://www.usenix.org/system/files/nsdi20-paper-yan.pdf"> Learning in situ: a randomized experiment in video streaming </a>
+      with 	Francis Y. Yan, Hudson Ayers, Sadjad Fouladi, James Hong, Keyi Zhang, Philip Alexander Levis, Keith Winstein <strong>(NSDI 2020)</strong>
     </li>
   </ul>
   </p>
 </section>
--->
